--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </header>
-        <!-- About-->
+        <!-- About
         <section class="page-section bg-primary" id="about">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
