--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         <meta name="author" content="" />
         <title>Creative - Start Bootstrap Theme</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="assets/favicon_io/site.webmanifest">
         <!-- Bootstrap Icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -39,11 +42,11 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Evolucion de aprendizaje Matias Sanchez</h1>
+                        <h1 class="text-white font-weight-bold">Evolución aprendizaje Matias Sanchez</h1>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Desacrga mi C.V si quisieras conocerme un poco mas, podras descubrir cosas interesantes. </p>
+                        <p class="text-white-75 mb-5">Descarga mi C.V para conocerme un poco mas, podras descubrir cosas interesantes. </p>
                         <a class="btn btn-primary btn-xl" href="#contact">Ver C.V</a> <!--Cambie el href-->
                     </div>
                 </div>
@@ -105,12 +108,14 @@
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/F1.png" title="Desafio N°1">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/D1.jpeg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/D1.jpeg" alt="..."/>
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Desafio</div>
                                 <div class="project-name">Ver Desafio N°1</div>
+
                             </div>
                         </a>
+                    </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/F2.png" title="Desafio N°2">
@@ -122,7 +127,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpeg" title="Desafio N°3">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/F3.png" title="Desafio N°3">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/D3.jpeg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Desafio</div>
@@ -131,7 +136,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpeg" title="Desafio N°4">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/F4.jpeg" title="Desafio N°4">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/D4.jpeg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Desafio</div>
@@ -140,7 +145,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpeg" title="Desafio N°5">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/F5.jpeg" title="Desafio N°5">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/D5.jpeg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Desafio</div>
@@ -149,8 +154,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Proximamente">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/F6.jpeg" title="Proximamente">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/D6.jpeg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Desafio</div>
                                 <div class="project-name">Proximamente</div>
@@ -164,7 +169,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">Revisa el Potafolio aquí</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Ver Ahora!</a>
+                <a class="btn btn-light btn-xl" href="">Ver Ahora!</a>
             </div>
         </section>
         <!-- Contact-->
