Se agregaron las ultimas imagenes para la entrega

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/F4.jpeg" title="Desafio N°4">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/F4 .png" title="Desafio N°4">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/D4.jpeg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Desafio</div>
@@ -145,7 +145,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/F5.jpeg" title="Desafio N°5">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/F5 .png" title="Desafio N°5">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/D5.jpeg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Desafio</div>
